force-app/main/default/objects/POE_ACI_Statistic__c/POE_ACI_Statistic__c.object-meta.xml
<CustomObject>
    <description>Captures the ACI Statistics.</description>
    <label>ACI Statistic</label>
    <nameField>
        <displayFormat>ACI#{YYYY}{MM}-{00000000}</displayFormat>
        <label>ACI Statistic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACI Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>