force-app/main/default/objects/POE_ACI_Statistic__c/fields/ACI_Stats_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ACI_Stats_CreatedDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACI Stats CreatedDate</label>
    <type>Date</type>
</CustomField>