force-app/main/default/objects/POE_ACI_Statistic__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <length>150</length>
    <type>Text</type>
</CustomField>