force-app/main/default/objects/POE_ACI_Statistic__c/fields/Checkout__c.field-meta.xml
<CustomField>
    <fullName>Checkout__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Checkout</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>