force-app/main/default/objects/POE_ACI_Statistic__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contact</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>