force-app/main/default/objects/POE_ACI_Statistic__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Check</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>