force-app/main/default/objects/POE_ACI_Statistic__c/fields/Curent_Loop__c.field-meta.xml
<CustomField>
    <fullName>Curent_Loop__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Loop</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>