force-app/main/default/objects/POE_ACI_Statistic__c/fields/Distance_Between_Points__c.field-meta.xml
<CustomField>
    <fullName>Distance_Between_Points__c</fullName>
    <formula>IF(OR(ISBLANK( Point_of_Disposition__c ), ISBLANK(Point_of_Interest__c)) , -1, DISTANCE( Point_of_Interest__c ,  Point_of_Disposition__c , &apos;mi&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Between Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>