force-app/main/default/objects/POE_ACI_Statistic__c/fields/MDU_Chuzo__c.field-meta.xml
<CustomField>
    <fullName>MDU_Chuzo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDU Chuzo</label>
    <referenceTo>MDU_Chuzo__c</referenceTo>
    <relationshipLabel>ACI Statistics</relationshipLabel>
    <relationshipName>ACI_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>