force-app/main/default/objects/POE_ACI_Statistic__c/fields/MDU_Name__c.field-meta.xml
<CustomField>
    <fullName>MDU_Name__c</fullName>
    <formula>MDU_Chuzo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDU Name</label>
    <type>Text</type>
</CustomField>