force-app/main/default/objects/POE_ACI_Statistic__c/fields/MDU_Number__c.field-meta.xml
<CustomField>
    <fullName>MDU_Number__c</fullName>
    <formula>MDU_Chuzo__r.MDU_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDU Number</label>
    <type>Text</type>
</CustomField>