force-app/main/default/objects/POE_ACI_Statistic__c/fields/Name_MDU__c.field-meta.xml
<CustomField>
    <fullName>Name_MDU__c</fullName>
    <label>Name MDU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>