force-app/main/default/objects/POE_ACI_Statistic__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ACI Statistics</relationshipLabel>
    <relationshipName>ACI_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>