force-app/main/default/objects/POE_ACI_Statistic__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>ACI Statistics</relationshipLabel>
    <relationshipName>ACI_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>