force-app/main/default/objects/POE_ACI_Statistic__c/fields/Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Order_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order Created</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>