force-app/main/default/objects/POE_ACI_Statistic__c/fields/Order_Process__c.field-meta.xml
<CustomField>
    <fullName>Order_Process__c</fullName>
    <formula>IF(Serviceability__c &gt; 0 ||  Credit_Check__c &gt; 0 || Product_Selection__c &gt; 0 ||  Checkout__c &gt; 0 ||  Schedule_Installation__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>