force-app/main/default/objects/POE_ACI_Statistic__c/fields/Point_of_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Disposition__c</fullName>
    <label>Point of Disposition</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>