force-app/main/default/objects/POE_ACI_Statistic__c/fields/Point_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Interest__c</fullName>
    <description>the location where the metric is expected to be captured.</description>
    <label>Point of Interest</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>