force-app/main/default/objects/POE_ACI_Statistic__c/fields/Presentation__c.field-meta.xml
<CustomField>
    <fullName>Presentation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>