force-app/main/default/objects/POE_ACI_Statistic__c/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Selection</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>