force-app/main/default/objects/POE_ACI_Statistic__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qualified</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>