force-app/main/default/objects/POE_ACI_Statistic__c/fields/Schedule_Installation__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Installation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Schedule Installation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>