force-app/main/default/objects/POE_ACI_Statistic__c/fields/Statistics_Date__c.field-meta.xml
<CustomField>
    <fullName>Statistics_Date__c</fullName>
    <label>Statistics Date</label>
    <type>DateTime</type>
</CustomField>