force-app/main/default/objects/POE_ACI_Statistic__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by Account Services to save the store. [PER-3343]</description>
    <label>Store</label>
    <referenceTo>POE_Retail_Store__c</referenceTo>
    <relationshipLabel>ACI Statistics</relationshipLabel>
    <relationshipName>ACI_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>