force-app/main/default/objects/POE_ACI_Statistic__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <description>Displays the Store Name of it&apos;s related store. [PER-3343]</description>
    <formula>Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>