force-app/main/default/objects/POE_ACI_Statistic__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <description>Displays the  Store Number of it&apos;s related store. [PER-3343]</description>
    <formula>Store__r.Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Number</label>
    <type>Text</type>
</CustomField>