force-app/main/default/objects/POE_ACI_Statistic__c/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>POI Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>