force-app/main/default/objects/POE_ACI_Statistic__c/fields/TPV__c.field-meta.xml
<CustomField>
    <fullName>TPV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TPV</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>