force-app/main/default/objects/POE_ACI_Statistic__c/fields/Within_Tolerance_del__c.field-meta.xml
<CustomField>
    <fullName>Within_Tolerance_del__c</fullName>
    <formula>IF (OR(ISBLANK( Point_of_Disposition__c ), ISBLANK(Point_of_Interest__c)), FALSE,
IF(Distance_Between_Points__c &lt; 0.25, TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within Tolerance</label>
    <type>Checkbox</type>
</CustomField>